--- a/netflix_clone/src/components/listItem/listItem.scss
+++ b/netflix_clone/src/components/listItem/listItem.scss
@@ -2,5 +2,83 @@
   width: 225px;
   height: 120px;
   background-color: #fff;
-  margin-right: 15px;
+  margin-right: 5px;
+  background-color: var(--main-color);
+  overflow: hidden;
+  cursor: pointer;
+  color: #fff;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  video {
+    width: 100%;
+    height: 140px;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  &:hover {
+    width: 325px;
+    height: 300px;
+    position: absolute;
+    top: -150px;
+    border-radius: 5px;
+    -webkit-box-shadow: 1px 3px 12px 1px rgba(255, 255, 255, 0.15);
+    box-shadow: 1px 3px 12px 1px rgba(255, 255, 255, 0.15);
+
+    img {
+      height: 140px;
+    }
+
+    .itemInfo {
+      display: flex;
+      flex-direction: column;
+      padding: 5px;
+
+      .icons {
+        display: flex;
+        margin-bottom: 10px;
+
+        .icon {
+          border: 2px solid #fff;
+          padding: 5px;
+          border-radius: 50%;
+          margin-right: 10px;
+          font-size: 16px;
+        }
+      }
+
+      .itemInfoTop {
+        display: flex;
+        align-items: center;
+        margin-bottom: 5px;
+        font-size: 14px;
+        font-weight: 600;
+        color: gray;
+
+        .limit {
+          border: 1px solid gray;
+          padding: 1px 3px;
+          margin: 0px 10px;
+          border-radius: 20%;
+        }
+      }
+
+      .itemDescription {
+        font-size: 12px;
+        margin-bottom: 10px;
+      }
+
+      .genre {
+        font-size: 14px;
+        color: lightgray;
+      }
+    }
+  }
 }
