--- a/netflix_clone/src/components/listItem/listItem.scss
+++ b/netflix_clone/src/components/listItem/listItem.scss
@@ -1,12 +1,11 @@
 .listItem {
   width: 225px;
   height: 120px;
-  background-color: #fff;
-  margin-right: 5px;
   background-color: var(--main-color);
+  margin-right: 5px;
   overflow: hidden;
   cursor: pointer;
-  color: #fff;
+  color: white;
 
   img {
     width: 100%;
@@ -28,9 +27,10 @@
     height: 300px;
     position: absolute;
     top: -150px;
+    -webkit-box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
+    box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
     border-radius: 5px;
-    -webkit-box-shadow: 1px 3px 12px 1px rgba(255, 255, 255, 0.15);
-    box-shadow: 1px 3px 12px 1px rgba(255, 255, 255, 0.15);
+    cursor: initial;
 
     img {
       height: 140px;
@@ -46,18 +46,17 @@
         margin-bottom: 10px;
 
         .icon {
-          border: 2px solid #fff;
+          border: 2px solid white;
           padding: 5px;
           border-radius: 50%;
           margin-right: 10px;
           font-size: 16px;
         }
       }
-
       .itemInfoTop {
         display: flex;
         align-items: center;
-        margin-bottom: 5px;
+        margin-bottom: 10px;
         font-size: 14px;
         font-weight: 600;
         color: gray;
@@ -65,13 +64,12 @@
         .limit {
           border: 1px solid gray;
           padding: 1px 3px;
-          margin: 0px 10px;
-          border-radius: 20%;
+          margin: 0 10px;
         }
       }
 
-      .itemDescription {
-        font-size: 12px;
+      .desc {
+        font-size: 13px;
         margin-bottom: 10px;
       }
 
