--- a/netflix_clone/src/pages/register/register.scss
+++ b/netflix_clone/src/pages/register/register.scss
@@ -20,6 +20,8 @@
 
       .logo {
         height: 40px;
+        cursor: pointer;
+        z-index: 1;
       }
 
       .loginButton {
@@ -30,7 +32,8 @@
         padding: 5px 15px;
         font-size: 16px;
         font-weight: 500;
-        cursor: pointer;
+        cursor: pointer !important;
+        z-index: 99;
       }
     }
   }
